# mirror-mdbook-variable

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
