[package]
name = "mdbook-variables"
version = "0.1.0"
authors = ["Tglman <tglman@tglman.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://gitlab.com/tglman/mdbook-variables"
readme = "README.md"
keywords = ["markdown", "mdbook", "variables"]

[badges]
gitlab = { repository = "tglman/mdbook-variables", branch = "master" }



[dependencies]
regex = "1.0.0"
mdbook = "0.3"
toml = "0.5.1"
lazy_static = "1.0"
serde_json= "1.0"
clap = "2.33"
